WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
149479
Error message in ContentExtensionError.cpp shouldn't have two spaces between sentences
https://bugs.webkit.org/show_bug.cgi?id=149479
Summary
Error message in ContentExtensionError.cpp shouldn't have two spaces between ...
Brian Weinstein
Reported
2015-09-22 15:52:26 PDT
Error message in ContentExtensionError.cpp shouldn't have two spaces between sentences
Attachments
Fix
(2.27 KB, patch)
2015-09-22 15:54 PDT
,
Brian Weinstein
no flags
Details
Formatted Diff
Diff
Fix
(2.21 KB, patch)
2015-09-22 16:00 PDT
,
Brian Weinstein
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Brian Weinstein
Comment 1
2015-09-22 15:54:07 PDT
Created
attachment 261770
[details]
Fix
Brian Weinstein
Comment 2
2015-09-22 15:56:36 PDT
***
Bug 149478
has been marked as a duplicate of this bug. ***
WebKit Commit Bot
Comment 3
2015-09-22 15:56:48 PDT
Attachment 261770
[details]
did not pass style-queue: ERROR: Source/WebCore/ChangeLog:8: You should remove the 'No new tests' and either add and list tests, or explain why no new tests were possible. [changelog/nonewtests] [5] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Brian Weinstein
Comment 4
2015-09-22 16:00:27 PDT
Created
attachment 261771
[details]
Fix
WebKit Commit Bot
Comment 5
2015-09-22 16:52:08 PDT
Comment on
attachment 261771
[details]
Fix Clearing flags on attachment: 261771 Committed
r190143
: <
http://trac.webkit.org/changeset/190143
>
WebKit Commit Bot
Comment 6
2015-09-22 16:52:11 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug