Error message in ContentExtensionError.cpp shouldn't have two spaces between sentences. https://bugs.webkit.org/show_bug.cgi?id=149479

Reviewed by Andy Estes.

* contentextensions/ContentExtensionError.cpp:
(WebCore::ContentExtensions::contentExtensionErrorCategory):


Canonical link: https://commits.webkit.org/167570@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@190143 268f45cc-cd09-0410-ab3c-d52691b4dbfc